--- a/CarControl/Objects/TM4C123G_Test.build_log.htm
+++ b/CarControl/Objects/TM4C123G_Test.build_log.htm
@@ -26,86 +26,10 @@ Project File Date:  07/31/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.19', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Rebuild target 'Target 1'
-Note: source file '.\Software\Libraries\pid.c' - object file renamed from '.\Objects\pid.o' to '.\Objects\pid_1.o'.
-compiling des.c...
-compiling comp.c...
-compiling fpu.c...
-compiling interrupt.c...
-compiling aes.c...
-compiling i2c.c...
-compiling cpu.c...
-compiling flash.c...
-compiling crc.c...
-compiling eeprom.c...
-compiling can.c...
-compiling epi.c...
-compiling onewire.c...
-compiling emac.c...
-compiling adc.c...
-compiling hibernate.c...
-compiling mpu.c...
-compiling lcd.c...
-compiling qei.c...
-compiling gpio.c...
-compiling pwm.c...
-compiling ssi.c...
-compiling shamd5.c...
-compiling systick.c...
-compiling sw_crc.c...
-compiling sysexc.c...
-compiling timer.c...
-compiling watchdog.c...
-compiling sysctl.c...
-compiling uart.c...
-compiling udma.c...
-compiling usb.c...
-assembling startup_rvmdk.S...
-compiling ExLib_EXTI.cpp...
-compiling ExLib_Exception.cpp...
-compiling ExLib_GPIO.cpp...
-compiling ExLib_UART.cpp...
-compiling ExLib_Main.cpp...
-compiling ExLib_PrintStream.cpp...
-compiling ExLib_WriteStream.cpp...
-compiling ExLib_Units.cpp...
-compiling Util_I2C.cpp...
-compiling ExLib_ReadStreamBuffered.cpp...
-compiling ExLib_BufferFIFO.cpp...
-compiling ExLib_ReadStream.cpp...
-compiling Util_UART.cpp...
-compiling Util_GPIO.cpp...
-compiling ExLib_PWM.cpp...
-compiling Util_FormattedPrint.cpp...
-compiling Util_HardwarePWM.cpp...
-compiling ExLib_FreeRTOS.cpp...
-compiling ExLib_HardwarePWM.cpp...
-compiling ExLib_System.cpp...
-compiling Util_QuadraticEncoder.cpp...
-compiling croutine.c...
-compiling ExLib_QuadraticEncoder.cpp...
-compiling ExLib_ADC.cpp...
-compiling ExLib_I2C.cpp...
-compiling Util_ADC.cpp...
-compiling list.c...
+Build target 'Target 1'
 compiling main.cpp...
-compiling Util_SSI.cpp...
-compiling ExLib_Timer.cpp...
-compiling ExLib_SPI.cpp...
-compiling event_groups.c...
-compiling port.c...
-compiling Util_Timer.cpp...
-compiling heap_3.c...
-compiling filter_fo.c...
-compiling pid.c...
-compiling timers.c...
-compiling Motor.cpp...
-compiling stream_buffer.c...
-compiling queue.c...
-compiling PID.cpp...
-compiling tasks.c...
 linking...
-Program Size: Code=25272 RO-data=1716 RW-data=1644 ZI-data=17340  
+Program Size: Code=25208 RO-data=1716 RW-data=1644 ZI-data=17348  
 ".\Objects\TM4C123G_Test.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -119,7 +43,7 @@ Package Vendor: Keil
   C:/Users/CHALLENGER/AppData/Local/Arm/Packs/Keil/TM4C_DFP/1.1.0/Device/Include/TM4C123
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
